# insurance-twin

./: Cargo.toml  Insurance_Twin.postman_collection.json  test_api.sh
.github/workflows/: deploy-admin-dashboard.yml
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/public/: CNAME
dashboard/src/: App.tsx  index.css
dashboard/src/components/: Sidebar.tsx  StatCard.tsx  StatusBadge.tsx
dashboard/src/data/: mockData.ts
dashboard/src/pages/: Insurance.tsx  Overview.tsx  Payments.tsx  Transactions.tsx  UsersPage.tsx
migrations/2024-01-01-000001_create_customers/: up.sql
migrations/2024-01-01-000002_create_insurance_plans/: down.sql  up.sql
migrations/2024-01-01-000003_create_plan_benefits/: down.sql  up.sql
migrations/2024-01-01-000004_create_policies/: up.sql
migrations/2024-01-01-000005_create_dependants/: down.sql  up.sql
migrations/2024-01-01-000006_create_nominees/: up.sql
migrations/2024-01-01-000007_create_claims/: down.sql  up.sql
migrations/2024-01-01-000008_create_benefit_usages/: down.sql  up.sql
src/: main.rs  schema.rs
src/api/: benefit_usages.rs  claims.rs  customers.rs  dependants.rs  mod.rs  nominees.rs  plan_benefits.rs  plans.rs  policies.rs
src/db/: mod.rs
src/models/: benefit_usage.rs  claim.rs  customer.rs  dependant.rs  insurance_plan.rs  mod.rs  nominee.rs  plan_benefit.rs  policy.rs
