[package]
name = "insurance-twin"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2"
diesel = { version = "2", features = ["postgres", "uuid", "chrono", "serde_json", "r2d2", "numeric"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
log = "0.4"
bigdecimal = { version = "0.4", features = ["serde"] }
